Fixed Header Alignment and Tags

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -111,4 +111,20 @@ h4,h5 {
     background-color: #f5f5f5;
     font-weight: bold;
   }
+
+  @media screen and (max-width: 767px) {
+    .row {
+      padding-left: 10px;
+      padding-right: 10px;
+    }
+    
+    .col-sm-6 {
+      flex-basis: 50%;
+    }
+  }
+  
+  .navbar-nav {
+    display: flex;
+    align-items: center;
+  }
   
